Fixed scroll bug in desktop. Fixed header logo not showing. Changed onbegin to setTimeout for devices that don't support onbegin

--- a/src/main.css
+++ b/src/main.css
@@ -36,6 +36,13 @@ h1 {
     font-weight: 900;
 }
 
+header img {
+    display: block;
+    min-height: 9vh;
+    height: 100%;
+    max-height: 100px;
+}
+
 header nav {
     display: flex;
 }
@@ -56,10 +63,6 @@ header nav li a {
 
 .underline {
     border-bottom: 1px solid;
-}
-
-header img {
-    max-height: 100px;
 }
 
 header .nav--active {
